# CS-461---NES-Emulator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  keybinds.ini  vcpkg.json
.github/workflows/: main.yml
include/nes/: ROM.hpp  apu.hpp  component.hpp  console.hpp  cpu.hpp  mem.hpp  ppu.hpp  timing.hpp
include/nes/mapper/: mapper.hpp  mapper_000.hpp  mapper_001.hpp  mapper_002.hpp  mapper_003.hpp  mapper_004.hpp  mapper_005.hpp  mapper_007.hpp
include/ui/: audio.hpp  keybinds.hpp  ui.hpp
src/: CMakeLists.txt  main.cpp
src/nes/: ROM.cpp  apu.cpp  console.cpp  cpu.cpp  mem.cpp  mem.hpp  ppu.cpp
src/nes/mapper/: mapper_000.cpp  mapper_001.cpp  mapper_002.cpp  mapper_003.cpp  mapper_004.cpp  mapper_005.cpp  mapper_007.cpp
src/ui/: audio.cpp  keybinds.cpp  ui.cpp
tests/: CMakeLists.txt  test_sanity  test_sanity.cpp
tests/ROM/: ROM_tests.cpp
tests/apu/: apu_test.cpp
tests/console/: console_tests.cpp
tests/cpu/: cpu_tests.cpp  opcode_tests.cpp
tests/mapper/: mapper_000_tests.cpp  mapper_001_tests.cpp  mapper_002_tests.cpp  mapper_003_tests.cpp  mapper_004_tests.cpp  mapper_005_tests.cpp  mapper_007_tests.cpp  mapper_tests.cpp
tests/mem/: mem_test.cpp
tests/ppu/: ppu_test.cpp
tests/support/: test_utils.hpp
tests/timing/: timing_tests.cpp
tests/ui/: audio_tests.cpp  ui_tests.cpp
